Brief description of the project goal

--- a/README
+++ b/README
@@ -6,3 +6,6 @@ The databases that we plan to support progressively are :
  - SQL Server
 
 GAB, is a GRAG (http://grag.sourceforge.net/) web equivalent. 
+
+By Nabil ADOUANI
+nabil.adouani@gmail.com
